@@ -1,5 +1,7 @@
 package dna;
 
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -21,41 +23,41 @@ public class DNACodon {
 
         // Codons from wikipedia: https://en.wikipedia.org/wiki/DNA_codon_table
 
-        aminoAcids.put("ala", List.of("GCT", "GCC", "GCA", "GCG"));
-        aminoAcids.put("arg", List.of("CGT", "CGC", "CGA", "CGG", "AGA", "AGG"));
-        aminoAcids.put("asn", List.of("AAT", "AAC"));
-        aminoAcids.put("asp", List.of("GAT", "GAC"));
+        aminoAcids.put("ala", Arrays.asList("GCT", "GCC", "GCA", "GCG"));
+        aminoAcids.put("arg", Arrays.asList("CGT", "CGC", "CGA", "CGG", "AGA", "AGG"));
+        aminoAcids.put("asn", Arrays.asList("AAT", "AAC"));
+        aminoAcids.put("asp", Arrays.asList("GAT", "GAC"));
         // there are some codons that can translate to both asp or asn, but due
         // to the constraint we will not include them
 
-        aminoAcids.put("cys", List.of("TGT", "TGC"));
-        aminoAcids.put("gln", List.of("CAA", "CAG"));
-        aminoAcids.put("glu", List.of("GAA", "GAG"));
-        aminoAcids.put("gly", List.of("GGT", "GGC", "GGA", "GGG"));
+        aminoAcids.put("cys", Arrays.asList("TGT", "TGC"));
+        aminoAcids.put("gln", Arrays.asList("CAA", "CAG"));
+        aminoAcids.put("glu", Arrays.asList("GAA", "GAG"));
+        aminoAcids.put("gly", Arrays.asList("GGT", "GGC", "GGA", "GGG"));
 
-        aminoAcids.put("his", List.of("CAT", "CAC"));
+        aminoAcids.put("his", Arrays.asList("CAT", "CAC"));
 
-        // aminoAcids.put("start", List.of("ATG"));
+        // aminoAcids.put("start", Arrays.asList("ATG"));
         // we don't include start as ATG already trancribes to start
 
-        aminoAcids.put("lle", List.of("ATT", "ATC", "ATA"));
-        aminoAcids.put("leu", List.of("CTT", "CTC", "CTA", "CTG", "TTA", "TTG"));
-        aminoAcids.put("lys", List.of("AAA", "AAG"));
+        aminoAcids.put("lle", Arrays.asList("ATT", "ATC", "ATA"));
+        aminoAcids.put("leu", Arrays.asList("CTT", "CTC", "CTA", "CTG", "TTA", "TTG"));
+        aminoAcids.put("lys", Arrays.asList("AAA", "AAG"));
 
-        aminoAcids.put("met", List.of("ATG"));
+        aminoAcids.put("met", Arrays.asList("ATG"));
 
-        aminoAcids.put("phe", List.of("TTT", "TTC"));
-        aminoAcids.put("pro", List.of("CCT", "CCC", "CCA", "CCG"));
+        aminoAcids.put("phe", Arrays.asList("TTT", "TTC"));
+        aminoAcids.put("pro", Arrays.asList("CCT", "CCC", "CCA", "CCG"));
 
-        aminoAcids.put("ser", List.of("TCT", "TCC", "TCA", "TCG", "AGT", "AGC"));
+        aminoAcids.put("ser", Arrays.asList("TCT", "TCC", "TCA", "TCG", "AGT", "AGC"));
 
-        aminoAcids.put("thr", List.of("ACT", "ACC", "ACA", "ACG"));
-        aminoAcids.put("trp", List.of("TGG"));
-        aminoAcids.put("tyr", List.of("TAT", "TAC"));
+        aminoAcids.put("thr", Arrays.asList("ACT", "ACC", "ACA", "ACG"));
+        aminoAcids.put("trp", Arrays.asList("TGG"));
+        aminoAcids.put("tyr", Arrays.asList("TAT", "TAC"));
 
-        aminoAcids.put("val", List.of("GTT", "GTC", "GTA", "GTG"));
+        aminoAcids.put("val", Arrays.asList("GTT", "GTC", "GTA", "GTG"));
 
-        aminoAcids.put("stop", List.of("TAA", "TGA", "TAG"));
+        aminoAcids.put("stop", Arrays.asList("TAA", "TGA", "TAG"));
 
         // We will also have a inverse map for quick amino acid lookup
         for (Map.Entry<String, List<String>> entry : aminoAcids.entrySet()) {
